Wed Feb 20 22:31:56 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/skel.c: Added setvar function. 

Wed Feb 20 22:31:38 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/netxml-ups.[ch],drivers/mge-xml.c: Integration work in NUT
   started. Supports currently one (1) variable. Work in progress!

Wed Feb 20 21:29:54 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/*-hid.c: Removed 'shutdown.return' and 'shutdown.stop' commands
   from the USB HID subdrivers, since they currently don't conform to the
   NUT standards for these commands.
 - drivers/usbhid-ups.c: The 'upsdrv_shutdown()' function now uses the
   'load.on' and 'load.off' commands to accomplish the same as with the
   previous 'shutdown.return' and 'shutdown.stop' commands (HID commands
   to the UPS are identical).

Tue Feb 19 20:41:51 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/netxml-ups.[ch],drivers/mge-xml.[ch]: Sneak preview for the
   new XML driver based on the 'neon' library. Work in progress!

Mon Feb 18 16:07:35 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>

 * Integrated Power Management (HAL integration) (port from Testing r1309):
   - fix the reporting of the battery technology,
   - fix the reporting of levels by adding a warning and a critical level,
   - report battery granularity,
   - only report the charging status if the battery charge is below 100 %,
   - report the current battery computed state (capacity_state),
   - report battery.alarm.{design,unit}

Sun Feb 17 22:40:34 UTC 2008 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 * drivers/megatec.c:
   - cancel any pending shutdowns soon after detecting the
     UPS to avoid tripping the bogus OFF flag test
   - set datastale() only after 3 failed polling cycles.

Sun Feb 17 19:58:59 UTC 2008 / Alexander I. Gordeev <lasaine@lvk.cs.msu.su>

 - data/driver.list: added Unitek Alpha 1250xD and Belkin Active
   Battery Backup BU30 series to the list.
